add_subdirectory(GraphicsItems)
add_subdirectory(GraphicsProxyWidget)
add_subdirectory(GraphicsItemInteraction)
add_subdirectory(GraphicsItemGroup)
add_subdirectory(GraphicsItemGroupEvent)
add_subdirectory(CustomSelectionHighlight)
add_subdirectory(InteractiveView)
add_subdirectory(GraphicsItemType)
add_subdirectory(GraphicsItemSignalSlot)